add mixins of grid and navbar

--- a/projet/htmlFramework.html
+++ b/projet/htmlFramework.html
@@ -69,19 +69,19 @@ c'est cool !
 </table>
 <hr>
 <!-- Liste ul -->
-<ul class="ul-square">
+<ul class="square">
     <li>50g de sucre</li>
     <li>2 tablettes de chocolat</li>
     <li>1 andouillette de Guéméné</li>
 </ul>
 <hr>
 <!-- liste ol-->
-<ol class="ol-circle">
+<ul class="circle">
     <li>Un premier élément</li>
     <li>Un deuxième</li>
     <li>Enfin le troisime</li>
     <li>Du coup, voici le quatrième</li>
-</ol>
+</ul>
 <hr>
 <h4> Voici la partie boutons du framework</h4>
 <button class="btn"><span>Cliquer, ici !</span></button>
@@ -115,6 +115,7 @@ c'est cool !
     <strong>Danger!</strong> Ceci est une simple alert
 </div>
 <hr>
+<h4>La navbar de mon framwork</h4>
 <div>
     <ul class="navbar">
         <li class="active"><a href="">Menu 1</a></li>
@@ -124,5 +125,47 @@ c'est cool !
         <li><a href="">Menu 5</a></li>
     </ul>
 </div>
+<hr>
+<h4>La grille de ce framework</h4>
+
+<div class="container">
+
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+    <div class="col-1 align-center">col-1</div>
+
+</div>
+
+<div class="container">
+    <div class="col-3 align-center">col-3</div>
+    <div class="col-3 align-center">col-3</div>
+    <div class="col-3 align-center">col-3</div>
+    <div class="col-3 align-center">col-3</div>
+</div>
+
+
+<div class="container">
+    <div class="col-2 align-center">col-2</div>
+    <div class="col-2 align-center" >col-2</div>
+    <div class="col-2 align-center">col-2</div>
+    <div class="col-2 align-center">col-2</div>
+    <div class="col-2 align-center">col-2</div>
+    <div class="col-2 align-center">col-2</div>
+</div>
+
+<div class="container">
+    <div class="col-12 align-center">col-12</div>
+
+</div>
+
 </body>
 </html>
