add mixins to filAriane and pagination

--- a/projet/htmlFramework.html
+++ b/projet/htmlFramework.html
@@ -166,6 +166,28 @@ c'est cool !
     <div class="col-12 align-center">col-12</div>
 
 </div>
+<div class="container">
 
+    <div class="col-6 offset-6 align-center">col-6 offset-6</div>
+
+</div>
+<h4>Type de pagination de ce framework</h4>
+
+    <div class="pagination">
+    <a href="#"> << </a>
+    <a href="#">1</a>
+    <a href="#" class="active">2</a>
+    <a href="#">3</a>
+    <a href="#">4</a>
+    <a href="#">5</a>
+    <a href="#">6</a>
+    <a href="#"> >> </a>
+    </div>
+<h4>Le fil d'arianne</h4>
+<ul class="filAriane">
+    <li class="active">Account Setup</li>
+    <li>Social Profiles</li>
+    <li>Personal Details</li>
+</ul>
 </body>
 </html>
